--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.4.1",
+    "prettier": "^2.8.3",
     "shx": "^0.3.4",
     "tailwindcss": "^3.2.4",
     "ts-jest": "^29.0.5",
