--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@physicaldotart/eslint-plugin",
-  "version": "1.0.0",
+  "name": "eslint-plugin-tailwindcss-jsx",
+  "version": "0.0.1",
   "description": "Extracts all TailwindCss class names located in an HTML Tag, outsources the class names to a constant, and updates the HTML tag with the constant",
   "keywords": [
     "tailwindcss-eslint-plugin",
@@ -11,11 +11,18 @@
   ],
   "author": "BennoDev",
   "license": "MIT",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "shx rm -rf dist && tsc",
-    "install:clean": "shx rm -rf node_modules && pnpm install",
-    "test": "jest"
+    "dev:publish": "yalc publish",
+    "dev:push": "pnpm run build && yalc push",
+    "watch:push": "tsc-watch --onSuccess \"pnpm run dev:push\"",
+    "pack": "pnpm pack",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src/**/*",
+    "install:clean": "shx rm -rf node_modules && pnpm install"
   },
   "dependencies": {
     "@typescript-eslint/utils": "^5.50.0",
@@ -43,5 +50,11 @@
     "tailwindcss": "^3.2.4",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
-  }
+  },
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md",
+    "CHANGELOG.md"
+  ]
 }
